NN-1639: Give users a link to try again if multiple email addresses